Antlr4Generator/Cpp/Output/Sy2Parser.cpp

// Generated from Sy2.g4 by ANTLR 4.7.1


#include "Sy2Listener.h"
#include "Sy2Visitor.h"

#include "Sy2Parser.h"


using namespace antlrcpp;
using namespace antlr4;

Sy2Parser::Sy2Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

Sy2Parser::~Sy2Parser() {
  delete _interpreter;
}

std::string Sy2Parser::getGrammarFileName() const {
  return "Sy2.g4";
}

const std::vector<std::string>& Sy2Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& Sy2Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

Sy2Parser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::FileContext::EOF() {
  return getToken(Sy2Parser::EOF, 0);
}

std::vector<tree::TerminalNode *> Sy2Parser::FileContext::NL() {
  return getTokens(Sy2Parser::NL);
}

tree::TerminalNode* Sy2Parser::FileContext::NL(size_t i) {
  return getToken(Sy2Parser::NL, i);
}

std::vector<Sy2Parser::CommandContext *> Sy2Parser::FileContext::command() {
  return getRuleContexts<Sy2Parser::CommandContext>();
}

Sy2Parser::CommandContext* Sy2Parser::FileContext::command(size_t i) {
  return getRuleContext<Sy2Parser::CommandContext>(i);
}


size_t Sy2Parser::FileContext::getRuleIndex() const {
  return Sy2Parser::RuleFile;
}

void Sy2Parser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void Sy2Parser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}


antlrcpp::Any Sy2Parser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::FileContext* Sy2Parser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, Sy2Parser::RuleFile);
  size_t _la = 0;
  _isAborted = false;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(26);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case Sy2Parser::NL: {
          setState(24);
          match(Sy2Parser::NL);
          break;
        }

        case Sy2Parser::ENCODING:
        case Sy2Parser::SIGNATURE_VERSION:
        case Sy2Parser::REG_VAR:
        case Sy2Parser::REG_CMD: {
          setState(25);
          dynamic_cast<FileContext *>(_localctx)->commandContext = command();
          dynamic_cast<FileContext *>(_localctx)->commands.push_back(dynamic_cast<FileContext *>(_localctx)->commandContext);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(28); 
      _errHandler->sync(this);
      _la = _input->LA(1);
	  if (_isAborted)
	  {
		  throw ParseCancellationException("Parsing aborted.");
	  }
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Sy2Parser::ENCODING)
      | (1ULL << Sy2Parser::SIGNATURE_VERSION)
      | (1ULL << Sy2Parser::REG_VAR)
      | (1ULL << Sy2Parser::REG_CMD)
      | (1ULL << Sy2Parser::NL))) != 0));
    setState(30);
    match(Sy2Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  catch (ParseCancellationException &e)
  {
	  this->notifyErrorListeners(this->getCurrentToken(), e.what(), std::current_exception());
  }

  return _localctx;
}

//----------------- CommandContext ------------------------------------------------------------------

Sy2Parser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::CommandContext::ENCODING() {
  return getToken(Sy2Parser::ENCODING, 0);
}

Sy2Parser::EncodingValueContext* Sy2Parser::CommandContext::encodingValue() {
  return getRuleContext<Sy2Parser::EncodingValueContext>(0);
}

tree::TerminalNode* Sy2Parser::CommandContext::NL() {
  return getToken(Sy2Parser::NL, 0);
}

tree::TerminalNode* Sy2Parser::CommandContext::SIGNATURE_VERSION() {
  return getToken(Sy2Parser::SIGNATURE_VERSION, 0);
}

Sy2Parser::SignValueContext* Sy2Parser::CommandContext::signValue() {
  return getRuleContext<Sy2Parser::SignValueContext>(0);
}

tree::TerminalNode* Sy2Parser::CommandContext::REG_VAR() {
  return getToken(Sy2Parser::REG_VAR, 0);
}

Sy2Parser::TypeDefinitionContext* Sy2Parser::CommandContext::typeDefinition() {
  return getRuleContext<Sy2Parser::TypeDefinitionContext>(0);
}

tree::TerminalNode* Sy2Parser::CommandContext::REG_CMD() {
  return getToken(Sy2Parser::REG_CMD, 0);
}

Sy2Parser::SymbolContext* Sy2Parser::CommandContext::symbol() {
  return getRuleContext<Sy2Parser::SymbolContext>(0);
}


size_t Sy2Parser::CommandContext::getRuleIndex() const {
  return Sy2Parser::RuleCommand;
}

void Sy2Parser::CommandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand(this);
}

void Sy2Parser::CommandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand(this);
}


antlrcpp::Any Sy2Parser::CommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitCommand(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::CommandContext* Sy2Parser::command() {
  CommandContext *_localctx = _tracker.createInstance<CommandContext>(_ctx, getState());
  enterRule(_localctx, 2, Sy2Parser::RuleCommand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(48);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sy2Parser::ENCODING: {
        enterOuterAlt(_localctx, 1);
        setState(32);
        match(Sy2Parser::ENCODING);
        setState(33);
        encodingValue();
        setState(34);
        match(Sy2Parser::NL);
        break;
      }

      case Sy2Parser::SIGNATURE_VERSION: {
        enterOuterAlt(_localctx, 2);
        setState(36);
        match(Sy2Parser::SIGNATURE_VERSION);
        setState(37);
        signValue();
        setState(38);
        match(Sy2Parser::NL);
        break;
      }

      case Sy2Parser::REG_VAR: {
        enterOuterAlt(_localctx, 3);
        setState(40);
        match(Sy2Parser::REG_VAR);
        setState(41);
        typeDefinition();
        setState(42);
        match(Sy2Parser::NL);
        break;
      }

      case Sy2Parser::REG_CMD: {
        enterOuterAlt(_localctx, 4);
        setState(44);
        match(Sy2Parser::REG_CMD);
        setState(45);
        symbol();
        setState(46);
        match(Sy2Parser::NL);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EncodingValueContext ------------------------------------------------------------------

Sy2Parser::EncodingValueContext::EncodingValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::EncodingValueContext::LITTLE_ENDIAN() {
  return getToken(Sy2Parser::LITTLE_ENDIAN, 0);
}

tree::TerminalNode* Sy2Parser::EncodingValueContext::BIG_ENDIAN() {
  return getToken(Sy2Parser::BIG_ENDIAN, 0);
}


size_t Sy2Parser::EncodingValueContext::getRuleIndex() const {
  return Sy2Parser::RuleEncodingValue;
}

void Sy2Parser::EncodingValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEncodingValue(this);
}

void Sy2Parser::EncodingValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEncodingValue(this);
}


antlrcpp::Any Sy2Parser::EncodingValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitEncodingValue(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::EncodingValueContext* Sy2Parser::encodingValue() {
  EncodingValueContext *_localctx = _tracker.createInstance<EncodingValueContext>(_ctx, getState());
  enterRule(_localctx, 4, Sy2Parser::RuleEncodingValue);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    _la = _input->LA(1);
    if (!(_la == Sy2Parser::LITTLE_ENDIAN

    || _la == Sy2Parser::BIG_ENDIAN)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignValueContext ------------------------------------------------------------------

Sy2Parser::SignValueContext::SignValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::SignValueContext::V2016() {
  return getToken(Sy2Parser::V2016, 0);
}


size_t Sy2Parser::SignValueContext::getRuleIndex() const {
  return Sy2Parser::RuleSignValue;
}

void Sy2Parser::SignValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSignValue(this);
}

void Sy2Parser::SignValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSignValue(this);
}


antlrcpp::Any Sy2Parser::SignValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitSignValue(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::SignValueContext* Sy2Parser::signValue() {
  SignValueContext *_localctx = _tracker.createInstance<SignValueContext>(_ctx, getState());
  enterRule(_localctx, 6, Sy2Parser::RuleSignValue);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(Sy2Parser::V2016);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDefinitionContext ------------------------------------------------------------------

Sy2Parser::TypeDefinitionContext::TypeDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::TypeDefinitionContext::BIT() {
  return getToken(Sy2Parser::BIT, 0);
}

Sy2Parser::NameContext* Sy2Parser::TypeDefinitionContext::name() {
  return getRuleContext<Sy2Parser::NameContext>(0);
}

Sy2Parser::OffsetContext* Sy2Parser::TypeDefinitionContext::offset() {
  return getRuleContext<Sy2Parser::OffsetContext>(0);
}

Sy2Parser::BitmaskContext* Sy2Parser::TypeDefinitionContext::bitmask() {
  return getRuleContext<Sy2Parser::BitmaskContext>(0);
}

Sy2Parser::SignatureContext* Sy2Parser::TypeDefinitionContext::signature() {
  return getRuleContext<Sy2Parser::SignatureContext>(0);
}

tree::TerminalNode* Sy2Parser::TypeDefinitionContext::STRUCT() {
  return getToken(Sy2Parser::STRUCT, 0);
}

tree::TerminalNode* Sy2Parser::TypeDefinitionContext::UNION() {
  return getToken(Sy2Parser::UNION, 0);
}

tree::TerminalNode* Sy2Parser::TypeDefinitionContext::ENUM() {
  return getToken(Sy2Parser::ENUM, 0);
}

Sy2Parser::EnumValueContext* Sy2Parser::TypeDefinitionContext::enumValue() {
  return getRuleContext<Sy2Parser::EnumValueContext>(0);
}


size_t Sy2Parser::TypeDefinitionContext::getRuleIndex() const {
  return Sy2Parser::RuleTypeDefinition;
}

void Sy2Parser::TypeDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDefinition(this);
}

void Sy2Parser::TypeDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDefinition(this);
}


antlrcpp::Any Sy2Parser::TypeDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitTypeDefinition(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::TypeDefinitionContext* Sy2Parser::typeDefinition() {
  TypeDefinitionContext *_localctx = _tracker.createInstance<TypeDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 8, Sy2Parser::RuleTypeDefinition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sy2Parser::BIT: {
        enterOuterAlt(_localctx, 1);
        setState(54);
        match(Sy2Parser::BIT);
        setState(55);
        name();
        setState(56);
        offset();
        setState(57);
        bitmask();
        setState(58);
        signature();
        break;
      }

      case Sy2Parser::STRUCT: {
        enterOuterAlt(_localctx, 2);
        setState(60);
        match(Sy2Parser::STRUCT);
        setState(61);
        name();
        setState(62);
        offset();
        setState(63);
        signature();
        break;
      }

      case Sy2Parser::UNION: {
        enterOuterAlt(_localctx, 3);
        setState(65);
        match(Sy2Parser::UNION);
        setState(66);
        name();
        setState(67);
        offset();
        setState(68);
        signature();
        break;
      }

      case Sy2Parser::ENUM: {
        enterOuterAlt(_localctx, 4);
        setState(70);
        match(Sy2Parser::ENUM);
        setState(71);
        name();
        setState(72);
        enumValue();
        setState(73);
        signature();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SymbolContext ------------------------------------------------------------------

Sy2Parser::SymbolContext::SymbolContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::SymbolContext::PROC() {
  return getToken(Sy2Parser::PROC, 0);
}

Sy2Parser::NameContext* Sy2Parser::SymbolContext::name() {
  return getRuleContext<Sy2Parser::NameContext>(0);
}

Sy2Parser::AddressContext* Sy2Parser::SymbolContext::address() {
  return getRuleContext<Sy2Parser::AddressContext>(0);
}

Sy2Parser::SignatureContext* Sy2Parser::SymbolContext::signature() {
  return getRuleContext<Sy2Parser::SignatureContext>(0);
}

tree::TerminalNode* Sy2Parser::SymbolContext::DATA() {
  return getToken(Sy2Parser::DATA, 0);
}


size_t Sy2Parser::SymbolContext::getRuleIndex() const {
  return Sy2Parser::RuleSymbol;
}

void Sy2Parser::SymbolContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSymbol(this);
}

void Sy2Parser::SymbolContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSymbol(this);
}


antlrcpp::Any Sy2Parser::SymbolContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitSymbol(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::SymbolContext* Sy2Parser::symbol() {
  SymbolContext *_localctx = _tracker.createInstance<SymbolContext>(_ctx, getState());
  enterRule(_localctx, 10, Sy2Parser::RuleSymbol);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sy2Parser::PROC: {
        enterOuterAlt(_localctx, 1);
        setState(77);
        match(Sy2Parser::PROC);
        setState(78);
        name();
        setState(79);
        address();
        setState(80);
        signature();
        break;
      }

      case Sy2Parser::DATA: {
        enterOuterAlt(_localctx, 2);
        setState(82);
        match(Sy2Parser::DATA);
        setState(83);
        name();
        setState(84);
        address();
        setState(85);
        signature();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

Sy2Parser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::NameContext::ID() {
  return getToken(Sy2Parser::ID, 0);
}


size_t Sy2Parser::NameContext::getRuleIndex() const {
  return Sy2Parser::RuleName;
}

void Sy2Parser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void Sy2Parser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}


antlrcpp::Any Sy2Parser::NameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitName(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::NameContext* Sy2Parser::name() {
  NameContext *_localctx = _tracker.createInstance<NameContext>(_ctx, getState());
  enterRule(_localctx, 12, Sy2Parser::RuleName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(Sy2Parser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OffsetContext ------------------------------------------------------------------

Sy2Parser::OffsetContext::OffsetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::OffsetContext::OFFSET() {
  return getToken(Sy2Parser::OFFSET, 0);
}


size_t Sy2Parser::OffsetContext::getRuleIndex() const {
  return Sy2Parser::RuleOffset;
}

void Sy2Parser::OffsetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOffset(this);
}

void Sy2Parser::OffsetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sy2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOffset(this);
}


antlrcpp::Any Sy2Parser::OffsetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sy2Visitor*>(visitor))
    return parserVisitor->visitOffset(this);
  else
    return visitor->visitChildren(this);
}

Sy2Parser::OffsetContext* Sy2Parser::offset() {
  OffsetContext *_localctx = _tracker.createInstance<OffsetContext>(_ctx, getState());
  enterRule(_localctx, 14, Sy2Parser::RuleOffset);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(Sy2Parser::OFFSET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BitmaskContext ------------------------------------------------------------------

Sy2Parser::BitmaskContext::BitmaskContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sy2Parser::BitmaskContext::BITMASK() {
  return getToken(Sy2Parser::BITMASK, 0);
}


size_t Sy2Parser::BitmaskContext::getRuleIndex() const {
  return Sy2Parser::RuleBitmask;
}
